sviluppo pagina index e profilo

--- a/client/app.json
+++ b/client/app.json
@@ -33,7 +33,9 @@
         }
       ]
     ],
-    "experiments": { "typedRoutes": true } 
-    
+    "experiments": { "typedRoutes": true },
+    "extra": {
+      "API_BASE_URL": "http://172.17.0.1:5000"
+    }
   }
 }
