preparazione delpoly su Railway e molti aggiornamenti al profilo, match e chat

--- a/client/app.json
+++ b/client/app.json
@@ -35,7 +35,8 @@
     ],
     "experiments": { "typedRoutes": true },
     "extra": {
-      "API_BASE_URL": "http://192.168.1.9:5000"
+      "API_BASE_URL": "https://swesh-production.up.railway.app"
     }
   }
 }
+
